added logo change